--- a/app/src/main/res/layout/fragment_inverter_via_thread.xml
+++ b/app/src/main/res/layout/fragment_inverter_via_thread.xml
@@ -31,6 +31,10 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="100dp"/>
-
+    <Button
+        android:id="@+id/back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="back" />
 
 </RelativeLayout>
