--- a/app/src/main/res/layout/fragment_start_page.xml
+++ b/app/src/main/res/layout/fragment_start_page.xml
@@ -10,8 +10,17 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Choose concurrency type"
-        android:textSize="22sp"
+        android:text="Choose what to use"
+        android:textSize="29sp"
+        android:layout_marginTop="150dp"
+        android:layout_centerHorizontal="true"/>
+    <TextView
+        android:id="@+id/disclaimer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/textView"
+        android:text="For better experience use small pics (nearly 400px)"
+        android:textSize="15sp"
         android:layout_marginTop="150dp"
         android:layout_centerHorizontal="true"/>
     <Button
